--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -7,12 +7,12 @@
 // 2. Include any default variable overrides here
 
 $body-bg: #f2f2f2;
-$input-btn-padding-y:         .5rem;
-$input-btn-padding-x:         1.5rem;
+$input-btn-padding-y: .5rem;
+$input-btn-padding-x: 1.5rem;
 
 // 3. Include remainder of required Bootstrap stylesheets (including any separate color mode stylesheets)
 @import "bootstrap/scss/variables";
-// @import "bootstrap/scss/variables-dark";
+@import "bootstrap/scss/variables-dark";
 
 // 4. Include any default map overrides here
 
@@ -22,9 +22,9 @@ $input-btn-padding-x:         1.5rem;
 @import "bootstrap/scss/root";
 
 // 6. Optionally include any other parts as needed
+@import "bootstrap/scss/utilities";
 @import "bootstrap/scss/buttons";
 @import "bootstrap/scss/card";
-@import "bootstrap/scss/utilities";
 @import "bootstrap/scss/reboot";
 @import "bootstrap/scss/type";
 @import "bootstrap/scss/images";
@@ -37,27 +37,46 @@ $input-btn-padding-x:         1.5rem;
 
 // 8. Add additional custom code here
 
-#hero {
-  background: url(./images/1940.jpg) no-repeat bottom center;
-  background-size: cover;
-  height: 25rem;
+#hero-bg {
+  object-fit: cover;
+  object-position: bottom center;
+  width: 100%;
+  height: 32rem;
 }
 
 #hero-img-container {
   box-sizing: content-box;
-  width: 15rem;
-  height: 15rem;
+  width: 16rem;
+  height: 16rem;
+
+  @media screen and (min-width: 992px) {
+    width: 18rem;
+    height: 18rem;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 22rem;
+    height: 22rem;
+  }
 }
 
 #hero-img {
-  // box-sizing: content-box;
   object-fit: cover;
   object-position: top center;
 }
 
 #hero-cta {
   width: 16rem;
-  height: 15rem;
+  height: 16rem;
+
+  @media screen and (min-width: 992px) {
+    width: 18rem;
+    height: 18rem;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 22rem;
+    height: 22rem;
+  }
 }
 
 .no-border-rad {
